--- a/css/main.css
+++ b/css/main.css
@@ -19,19 +19,19 @@ body {
 }
 
 .main__box--text {
-  background-color: #f5f5f5;
+  background-color: #d8a380;
   border-radius: 10px;
   width: 100%;
   padding: 10px;
-  color: orange;
+  color: white;
   font-size: 17px;
 }
 
 .main__form-input {
   height: 30px;
   background: transparent;
-  color: purple;
-  border: 1px solid purple;
+  color: #4598af;
+  border: 2px solid #f24040;
   outline: 0;
   width: 300px;
   border-radius: 10px;
@@ -43,13 +43,20 @@ body {
 }
 
 .main__form-btn {
-  background: purple;
+  background: #f24040;
   color: white;
   font-weight: bold;
   outline: 0;
   border: none;
   padding: 10px;
   border-radius: 5px;
+}
+
+.main__box--result {
+  color: #4598af;
+  font-size: 17px;
+  margin: 10px 0;
+  font-weight: bold;
 }
 
 @media  screen and (min-width: 40em) {
@@ -59,5 +66,7 @@ body {
     font-size: 25px;
   }
 
-
+  .main__box--result {
+    font-size: 25px;
+  }
 }
