--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,10 @@ body {
 .main__box-image {
   width: 200px;
   display: inline-block;
+  animation-name: bounce;
+  animation-duration: 2.5s;
+  animation-fill-mode: both;
+  animation-iteration-count: infinite;
 }
 
 .main__box--text {
@@ -25,6 +29,23 @@ body {
   padding: 10px;
   color: white;
   font-size: 17px;
+  position: relative;
+}
+
+.main__box--text:after {
+	top: 95%;
+	left: 50%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
+	border-color: rgba(216, 163, 128, 0);
+	border-top-color: #d8a380;
+	border-width: 30px;
+  margin-left: -30px;
+  
 }
 
 .main__form-input {
@@ -66,4 +87,20 @@ body {
     font-size: 25px;
   }
 
+  .main__box--text:after {
+    left: 100%;
+    top: 50%;
+    border-left-color: #d8a380;
+    border-width: 30px;
+    margin-top: -30px;
+    margin-left: 0;
+    border-top-color: transparent;
+  }
+
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+  40% {transform: translateY(-30px);}
+  60% {transform: translateY(-15px);}
 }
